[metadata]
name = objdict
version = 0.0.1
author = Daniel Farayola
author_email = faradaydanfard@gmail.com
description = to use object type "." operator with dictionaries
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hephay/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True